--- a/menubook/angular.json
+++ b/menubook/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "menuApp": {
+    "menubook": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,18 +13,18 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/menuApp",
+            "outputPath": "dist/menubook",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "menuApp:build"
+            "browserTarget": "menubook:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "menuApp:build:production"
+              "browserTarget": "menubook:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "menuApp:build"
+            "browserTarget": "menubook:build"
           }
         },
         "test": {
@@ -111,15 +111,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "menuApp:serve"
+            "devServerTarget": "menubook:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "menuApp:serve:production"
+              "devServerTarget": "menubook:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "menuApp"
+  "defaultProject": "menubook"
 }
